- hero section complete

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
           </button>
         </div>
       </nav>
+      <section class="hero py-14">
+        <div class="con flex flex-col gap-8 items-center text-gray-950">
+          <p class="text-xl md:text-2xl font-bold text-zinc-500">
+            Bringing Families Together ❤️‍🔥
+          </p>
+          <h1
+            class="text-5xl leading-[60px] md:text-7xl md:leading-[88px] font-black max-w-[20ch] text-center"
+          >
+            Your Path to Adoption Starts Here
+          </h1>
+          <p class="max-w-[80ch] text-center leading-7">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a.
+          </p>
+          <a href="#" class="btn-primary">View more</a>
+          <figure class="max-h-[450px]">
+            <img src="./assets/images/pet.webp" alt="dog-image" />
+          </figure>
+        </div>
+      </section>
     </header>
   </body>
 </html>
