- adoption frame complete

--- a/index.html
+++ b/index.html
@@ -66,5 +66,95 @@
         </div>
       </section>
     </header>
+
+    <main>
+      <section class="adoption">
+        <div class="con">
+          <header class="flex flex-col items-center text-center gap-4">
+            <h1 class="text-4xl font-black">Adopt Your Best Friend</h1>
+            <p class="text-slate-700 max-w-[70ch]">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a.
+            </p>
+          </header>
+
+          <div
+            class="categories grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-10"
+          >
+            <button class="categories__btn active">
+              <figure>
+                <img src="https://i.ibb.co.com/N7dM2K1/cat.png" alt="dog" />
+              </figure>
+              <span> Dogs </span>
+            </button>
+            <button class="categories__btn">
+              <figure>
+                <img src="https://i.ibb.co.com/N7dM2K1/cat.png" alt="dog" />
+              </figure>
+              <span> Dogs </span>
+            </button>
+            <button class="categories__btn">
+              <figure>
+                <img src="https://i.ibb.co.com/N7dM2K1/cat.png" alt="dog" />
+              </figure>
+              <span> Dogs </span>
+            </button>
+            <button class="categories__btn">
+              <figure>
+                <img src="https://i.ibb.co.com/N7dM2K1/cat.png" alt="dog" />
+              </figure>
+              <span> Dogs </span>
+            </button>
+          </div>
+
+          <div
+            class="flex flex-col gap-8 md:flex-row items-center justify-between mt-16"
+          >
+            <h2 class="text-2xl font-black">Best Deal For you</h2>
+            <button class="btn-primary">Sort by price</button>
+          </div>
+
+          <div class="grid md:grid-cols-12 mt-8 gap-6">
+            <div class="animal-items min-h-96 md:col-span-8 grid grid-cols-4">
+              <!-- <div class="h-5 aspect-square bg-orange-600"></div>
+              <div class="h-5 aspect-square bg-orange-600"></div>
+              <div class="h-5 aspect-square bg-orange-600"></div> -->
+
+              <!-- Not Found -->
+              <div
+                class="bg-gray-100 col-span-full row-span-full flex flex-col text-center items-center gap-4 p-8 justify-center rounded-xl"
+              >
+                <figure>
+                  <img
+                    class="w-36"
+                    src="./assets/images/error.webp"
+                    alt="error"
+                  />
+                </figure>
+                <h3 class="text-3xl font-bold">No Information Available</h3>
+                <p class="text-gray-600">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                  The point of using Lorem Ipsum is that it has a.
+                </p>
+              </div>
+            </div>
+
+            <!-- Cart -->
+            <sidebar
+              id="cart"
+              class="animal-sibebar min-h-96 rounded-xl p-4 row-start-1 md:col-span-4 md:row-start-auto border-2 border-slate-200"
+            ></sidebar>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </body>
 </html>
