--- a/index.html
+++ b/index.html
@@ -117,79 +117,399 @@
 
           <div class="grid md:grid-cols-12 mt-8 gap-6">
             <div
-              class="animal-items min-h-96 md:col-span-8 grid gap-3 grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 place-items-start"
+              class="animal-items min-h-96 md:col-span-6 lg:col-span-8 grid gap-3 grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 place-items-start border-2 rounded-xl p-2"
             >
               <!-- Card -->
-              <div
-                class="card border-2 border-gray-200 rounded-lg overflow-hidden p-4"
-              >
-                <figure class="rounded-lg overflow-hidden">
+              <div class="pet-card">
+                <figure class="pet-banner">
                   <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
                 </figure>
 
                 <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
 
-                <ul class="text-slate-600 flex flex-col gap-2 mt-4">
-                  <li>Breed: Golder retriever</li>
-                  <li>Birth: 2024</li>
-                  <li>Gender: Female</li>
-                  <li>Price : 199$</li>
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
                 </ul>
 
                 <hr class="border-gray-200 mt-4" />
 
-                <div class="btn-groups flex justify-between mt-4">
-                  <button class="bg-red-300 p-3 rounded-md">Like</button>
-                  <button class="bg-red-300 p-3 rounded-md">Adopt</button>
-                  <button class="bg-red-300 p-3 rounded-md">Details</button>
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
                 </div>
               </div>
-              <div
-                class="card border-2 border-gray-200 rounded-lg overflow-hidden p-4"
-              >
-                <figure class="rounded-lg overflow-hidden">
+              <div class="pet-card">
+                <figure class="pet-banner">
                   <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
                 </figure>
 
                 <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
 
-                <ul class="text-slate-600 flex flex-col gap-2 mt-4">
-                  <li>Breed: Golder retriever</li>
-                  <li>Birth: 2024</li>
-                  <li>Gender: Female</li>
-                  <li>Price : 199$</li>
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
                 </ul>
 
                 <hr class="border-gray-200 mt-4" />
 
-                <div class="btn-groups flex justify-between mt-4">
-                  <button class="bg-red-300 p-3 rounded-md">Like</button>
-                  <button class="bg-red-300 p-3 rounded-md">Adopt</button>
-                  <button class="bg-red-300 p-3 rounded-md">Details</button>
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
                 </div>
               </div>
-              <div
-                class="card border-2 border-gray-200 rounded-lg overflow-hidden p-4"
-              >
-                <figure class="rounded-lg overflow-hidden">
+              <div class="pet-card">
+                <figure class="pet-banner">
                   <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
                 </figure>
 
                 <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
 
-                <ul class="text-slate-600 flex flex-col gap-2 mt-4">
-                  <li>Breed: Golder retriever</li>
-                  <li>Birth: 2024</li>
-                  <li>Gender: Female</li>
-                  <li>Price : 199$</li>
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
                 </ul>
 
                 <hr class="border-gray-200 mt-4" />
 
-                <div class="btn-groups flex justify-between mt-4">
-                  <button class="bg-red-300 p-3 rounded-md">Like</button>
-                  <button class="bg-red-300 p-3 rounded-md">Adopt</button>
-                  <button class="bg-red-300 p-3 rounded-md">Details</button>
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
+                </div>
+              </div>
+              <div class="pet-card">
+                <figure class="pet-banner">
+                  <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
+                </figure>
+
+                <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
+
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
+                </ul>
+
+                <hr class="border-gray-200 mt-4" />
+
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
+                </div>
+              </div>
+              <div class="pet-card">
+                <figure class="pet-banner">
+                  <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
+                </figure>
+
+                <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
+
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
+                </ul>
+
+                <hr class="border-gray-200 mt-4" />
+
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
+                </div>
+              </div>
+              <div class="pet-card">
+                <figure class="pet-banner">
+                  <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
+                </figure>
+
+                <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
+
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
+                </ul>
+
+                <hr class="border-gray-200 mt-4" />
+
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
+                </div>
+              </div>
+              <div class="pet-card">
+                <figure class="pet-banner">
+                  <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
+                </figure>
+
+                <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
+
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
+                </ul>
+
+                <hr class="border-gray-200 mt-4" />
+
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
+                </div>
+              </div>
+              <div class="pet-card">
+                <figure class="pet-banner">
+                  <img src="https://i.ibb.co.com/p0w744T/pet-1.jpg" alt="dog" />
+                </figure>
+
+                <h1 class="mt-4 text-xl font-bold">Mister Tartosh</h1>
+
+                <ul class="pet-details-list">
+                  <li>
+                    <img src="./assets/images/breed-ico.png" alt="breed" />
+                    Breed: Golder retriever
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/calender-ico.png"
+                      alt="calender"
+                    />
+                    Birth: 2024
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/gender-ico.png"
+                      alt="gender-ico"
+                    />
+                    Gender: Female
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/images/dollar-ico.png"
+                      alt="dollar-ico"
+                    />
+                    Price : 199$
+                  </li>
+                </ul>
+
+                <hr class="border-gray-200 mt-4" />
+
+                <div class="pet-btn-groups">
+                  <button class="pet-btn thumb">
+                    <img
+                      class="h-5 aspect-square"
+                      src="./assets/images/thumbs-up.png"
+                      alt="like"
+                    />
+                  </button>
+                  <button class="pet-btn">Adopt</button>
+                  <button class="pet-btn">Details</button>
                 </div>
               </div>
 
@@ -216,12 +536,50 @@
             <!-- Cart -->
             <sidebar
               id="cart"
-              class="animal-sibebar min-h-96 rounded-xl p-4 row-start-1 md:col-span-4 md:row-start-auto border-2 border-slate-200"
-            ></sidebar>
+              class="animal-sibebar min-h-96 rounded-xl p-4 row-start-1 md:col-span-6 lg:col-span-4 md:row-start-auto border-2 border-slate-200 grid grid-cols-3 gap-2 content-start"
+            >
+              <figure class="border-2 rounded-md p-2">
+                <img
+                  class="rounded-md"
+                  src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+                  alt="dog"
+                />
+              </figure>
+              <figure class="border-2 rounded-md p-2">
+                <img
+                  class="rounded-md"
+                  src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+                  alt="dog"
+                />
+              </figure>
+              <figure class="border-2 rounded-md p-2">
+                <img
+                  class="rounded-md"
+                  src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+                  alt="dog"
+                />
+              </figure>
+              <figure class="border-2 rounded-md p-2">
+                <img
+                  class="rounded-md"
+                  src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+                  alt="dog"
+                />
+              </figure>
+              <figure class="border-2 rounded-md p-2">
+                <img
+                  class="rounded-md"
+                  src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+                  alt="dog"
+                />
+              </figure>
+            </sidebar>
           </div>
         </div>
       </section>
     </main>
+
+    <!-- <div class="loader"></div> -->
 
     <footer class="bg-slate-950 text-white mt-12">
       <div class="con py-16 flex gap-20 flex-col md:flex-row justify-between">
