--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/output.css" />
     <script defer type="module" src="./assets/main.js"></script>
   </head>
+
   <body class="font-lato">
     <header>
       <nav>
@@ -653,5 +654,75 @@
         </div>
       </div>
     </footer>
+
+    <!-- Dialog -->
+    <dialog
+      open
+      id="dialog"
+      class="fixed inset-0 bg-slate-900/70 w-full h-full flex items-center justify-center"
+    >
+      <div class="animal-details bg-white p-8 rounded-xl max-w-[636px]">
+        <img
+          class="rounded-md w-[636px] aspect-video object-cover"
+          src="https://i.ibb.co.com/p0w744T/pet-1.jpg"
+          alt="dog"
+        />
+        <h1 class="mt-6 text-2xl font-bold">Alessia Max</h1>
+        <ul class="pet-details-tags mt-4">
+          <li>
+            <img
+              src="./assets/images/breed-ico.png"
+              alt="vaccination-ico"
+            />Breed: Golder retriever
+          </li>
+          <li>
+            <img
+              src="./assets/images/calender-ico.png"
+              alt="vaccination-ico"
+            />Birth: 2024
+          </li>
+          <li>
+            <img
+              src="./assets/images/gender-ico.png"
+              alt="vaccination-ico"
+            />Gender: Female
+          </li>
+          <li>
+            <img
+              src="./assets/images/dollar-ico.png"
+              alt="vaccination-ico"
+            />Price : 199$
+          </li>
+          <li>
+            <img
+              src="./assets/images/vaccination-ico.png"
+              alt="vaccination-ico"
+            />Vaccinated status: Partially
+          </li>
+        </ul>
+
+        <hr class="my-4" />
+
+        <h4 class="font-semibold">Details Information</h4>
+        <ul class="list-disc text-gray-600 mt-2 leading-6">
+          <span>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </span>
+          <div class="ps-7">
+            <li>
+              The point of using is that it has a more-or-less normal
+              distribution of letters, as opposed to using.
+            </li>
+          </div>
+        </ul>
+
+        <button
+          class="mt-4 btn-primary w-full py-2 bg-teal-100 text-teal-600 border-2 border-teal-200"
+        >
+          Cancel
+        </button>
+      </div>
+    </dialog>
   </body>
 </html>
